# cpp-s6i_task

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/s6i_task/: permission.h  prelude.h  resource_traits.h  resources.h  task_func.h
tests/: pch.h  permission_test.cpp  resources_test.cpp  task_func_test.cpp
